--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCus.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCus.cshtml
@@ -125,7 +125,7 @@ else
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="@Url.Action("AddCus","ManageRoom")" title="Thêm mới loại phòng">
+            <a class="btn btn-primary" href="@Url.Action("AddCus","ManageRoom")" title="Thêm mới khách hàng">
                 <i class="fa fa-plus"></i>
                 &nbsp;Thêm mới khách hàng
             </a>
