--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCus.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCus.cshtml
@@ -3,12 +3,12 @@
 @model CusInfo
 
 @{
-    ViewBag.Title = "AddCus";
+    ViewBag.Title = "UpdateCus";
     Layout = "~/Views/Shared/_LayoutManageRoom.cshtml";
 }
 
 @section ContentHeaderManageRoom{
-    Thêm mới khách hàng
+    Cập nhật thông tin khách hàng
 }
 
 @section style{
@@ -33,7 +33,7 @@
             //style: 'btn-info',
             //size: 4
         });
-        $("#frmAdd").validate({
+        $("#frmUpdate").validate({
             rules: {
                 CusNameInfo: {
                     required: true,
@@ -67,9 +67,6 @@
                 }
             }
         });
-        $('a[name ="aAdd"]').on('click', function () {
-            $("#roomtype option:selected").text();
-        });
     </script>
 
 }
@@ -85,8 +82,15 @@
             //<p class="error">@ViewBag.ErrorMsg</p>
             //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
         }
-        @using (Html.BeginForm("AddCus", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("UpdateInfoCus", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.CatIDInfo, "ID loại sản phẩm:", new { @class = "col-sm-2 control-label" })
+                    <div class="col-sm-4">
+                        @Html.DisplayFor(m => m.CatIDInfo, new { @class = "form-control", placeholder = "id loại sản phẩm" })
+                    </div>*@
+                @Html.HiddenFor(m => m.CusIDInfo)
+            </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.CusNameInfo, "Họ tên:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
@@ -133,9 +137,9 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary" name="aAdd">
-                        <i class="fa fa-plus"></i>
-                        &nbsp;Thêm
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-check"></i>
+                        &nbsp;Cập nhật
                     </button>
                 </div>
             </div>
