--- a/MVCQLKS/MVCQLKS/Views/Room/ListTimKiem.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/ListTimKiem.cshtml
@@ -46,7 +46,7 @@ else
                         @*<h4 class="caption-red">Giá: @string.Format("{0:N0} đ", @p.Price)</h4>*@
                         @*<h4 class="caption-red">Giá:  @Html.Price2String(p.Price)</h4>*@
                         <h4 class="caption-red">Giá: @Html.Price2String((decimal)p.Price)</h4>
-                        <p>
+                        <p class="caption-bold">
                             Tình trạng:
                             @if (@p.Status > 0)
                     {
@@ -59,8 +59,8 @@ else
                         </p>
                         <p>
                             @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
-                            <a href="@Url.Action("Detail", "Room", new {id = p.RoomID })" class="btn btn-default" role="button">Thuê phòng</a>
-                            <a href="#" class="btn btn-primary" role="button">Trả phòng</a>
+                            <a href="@Url.Action("Detail", "Room", new {id = p.RoomID })" class="btn btn-default" role="button">Xem chi tiết</a>
+                            <a href="#" class="btn btn-primary" role="button">Thuê phòng</a>
                         </p>
                     </div>
                 </div>
