--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -14,6 +14,19 @@
         @RenderSection("style")
     }
     <style type="text/css">
+          .caption-green {
+            color: forestgreen;
+        }
+
+        .caption-red {
+            color: red;
+            font-weight: bold;
+        }
+
+        .caption-bold {
+            font-weight: bold;
+        }
+
         .input-validation-error {
             border: 2px solid #f00;
             background-color: #fee;
