--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutAdmin.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutAdmin.cshtml
@@ -14,7 +14,7 @@
         @RenderSection("style")
     }
     <style type="text/css">
-          .caption-green {
+        .caption-green {
             color: forestgreen;
         }
 
@@ -63,38 +63,23 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                        <i class="fas fa-building"></i>&nbsp;&nbsp;Trang chủ
+                        <i class="fas fa-building"></i>&nbsp;&nbsp;Trang Quản trị
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Link</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
+                        <li class="active"><a href="#">Quản lý Loại phòng <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Quản lý Phòng</a></li>
+                        <li><a href="#">Quản lý Tài khoản</a></li>
+                        <li><a href="#">Quản lý Khách hàng</a></li>
                     </ul>
-                    <form id="frmSearch" method="post" action="@Url.Action("TimKiem", "Room")" class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input id="txtSearch" type="text" name="noidungSearch" class="form-control" placeholder="Nội dung cần tìm">
-                        </div>
-                        <a name="btnSearch" href="javascript:void" class="btn btn-default" role="button">Tìm kiếm</a>
-                    </form>
+                    
                     <ul class="nav navbar-nav navbar-right">
                         @if (Html.IsLogged() == false)
                         {
                             <li><a href="@Url.Action("Register", "Account")">Đăng ký</a></li>
-                            <li><a href="@Url.Action("Login", "Account")">Đăng nhập</a></li>
+                            <li><a href="@Url.Action("Login", "Account")">Đăng nhập Admin</a></li>
                         }
                         else
                         {
@@ -102,7 +87,6 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
-                                    <li><a href="@Url.Action("IndexManageRoom", "ManageRoom")"><i class="fa fa-id-card" aria-hidden="true"></i> Quản trị của Admin</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a id="logoutLink" href="javascript:void"><i class="fas fa-sign-out-alt"></i> Thoát</a></li>
                                 </ul>
@@ -149,16 +133,6 @@
         $('#logoutLink').on('click', function () {
             $('#frmLogout').submit();
         });
-        $('a[name ="btnSearch"]').on('click', function () {
-            var noidungtim = $.trim($('#txtSearch').val());
-            if (noidungtim == '') {
-                alert('Nhập nội dung bạn muốn tìm!');
-            }
-            else {
-                $('#txtSearch').val();
-                $('#frmSearch').submit();
-            }
-        });
     </script>
     @if (IsSectionDefined("script"))
     {
@@ -166,3 +140,5 @@
     }
 </body>
 </html>
+
+
