Load DSKH + Thêm/Xoá/Sửa

--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -126,7 +126,7 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý Khách hàng</div>
-                    <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách khách hàng</a>
+                    <a href="@Url.Action("CustomerList", "Employ")" class="list-group-item">Danh sách khách hàng</a>
                 </div>
             </div>
             <div class="col-md-9">
