--- a/MVCQLKS/MVCQLKS/Views/Account/Register.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Account/Register.cshtml
@@ -18,27 +18,39 @@
 }
 
 @section script{
+    <script src="~/Content/js/jquery-3.1.1.min.js"></script>
     <script src="~/Content/js/jquery.validate.min.js"></script>
+    <script src="~/Content/js/jquery.validate.js"></script>
     <script type="text/javascript">
         $("#frmRegister").validate({
             rules: {
-                UserName: "required",
+                UserName: {
+                    required: true,
+                    minlength: 2
+                },
                 Password: {
                     required: true,
                     minlength: 4
                 },
                 ConfirmPassword: {
                     required: true,
+                    equalTo: "#Password"
                 },
                 Name: "required",
             },
             messages: {
-                UserName: "Bạn cần điền Tên Đăng nhập!",
+                UserName: {
+                    required: "Bạn cần điền Tên Đăng nhập!",
+                    minlength: "Tên đăng nhập phải ít nhất 2 ký tự!"
+                },
                 Password: {
                     required: "Bạn cần điền Mật khẩu!",
                     minlength: "Mật khẩu phải ít nhất 4 ký tự!"
                 },
-                ConfirmPassword: "Bạn cần xác nhận lại Mật khẩu!",
+                ConfirmPassword: {
+                    required: "Bạn cần xác nhận lại Mật khẩu!",
+                    equalTo: "Nhập lại chưa đúng!"
+                },
                 Name: "Bạn cần nhập Họ và tên!"
             }
         });
@@ -67,7 +79,7 @@
             </div>
         </div>
         <div class="control-group">
-            @Html.LabelFor(m => m.Password, "Mật khẩu:", new { @class = "col-sm-4 control-label", id = "Pass" })
+            @Html.LabelFor(m => m.Password, "Mật khẩu:", new { @class = "col-sm-4 control-label", id = "Pass", name = "Password" })
             <div class="col-md-6 form-control-static">
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
             </div>
