--- a/MVCQLKS/MVCQLKS/Views/Employ/CustomerList.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Employ/CustomerList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IList<MVCQLKS.Models.Customer>
 
 @section ContentHeader{
-    Danh sách Khách hàng
+    Danh sách khách hàng đặt phòng
 }
 
 <div class="row">
