--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -63,14 +63,15 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                        <i class="fas fa-building"></i>&nbsp;&nbsp;Trang chủ
+                        <i class="fas fa-building"></i>&nbsp;&nbsp;@*Trang chủ*@
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Link</a></li>
+                        <li class="active"><a href="@Url.Action("QuanLyCusBookRoom", "Employ")">Khách hàng đặt phòng <span class="sr-only">(current)</span></a></li>
+                        <li><a href="@Url.Action("QuanLyCusChoNV", "Employ")">Quản lý khách hàng</a></li>
+                        <li><a href="@Url.Action("QuanLyRoomChoNV", "Employ")">Quản lý phòng</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -113,15 +114,10 @@
             </div><!-- /.container-fluid -->
         </nav>
         <form id="frmLogout" method="post" action="@Url.Action("Logout", "Account")"></form>
-        <div class="row">
+        @*<div class="row">
             <div class="col-md-3">
-                @*<div class="panel panel-primary">
-                        <div class="panel-heading">Danh mục phòng</div>
-                        @Html.Action("GetList", "Category")
-                    </div>*@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý Khách sạn</div>
-                    @*<a href="@Url.Action("QuanLyCatChoNV", "Employ")" class="list-group-item">Danh mục phòng</a>*@
                     <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách phòng</a>
                 </div>
                 <div class="panel panel-primary">
@@ -132,6 +128,18 @@
             <div class="col-md-9">
                 <div class="panel panel-primary">
                     <div class="panel-heading">@RenderSection("ContentHeader")</div>
+                    <div class="panel-body">
+                        @RenderBody()
+                    </div>
+                </div>
+            </div>
+        </div>*@
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        @RenderSection("ContentHeader")
+                    </div>
                     <div class="panel-body">
                         @RenderBody()
                     </div>
