--- a/MVCQLKS/MVCQLKS/Views/Home/_Partial6PhongDaChoThue.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Home/_Partial6PhongDaChoThue.cshtml
@@ -45,7 +45,7 @@ else
                         <p>
                             @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
                             <a href="@Url.Action("Detail", "Room", new {id = p.RoomID })" class="btn btn-default" role="button">Xem chi tiết</a>
-                            <a href="#" class="btn btn-primary" role="button">Thuê phòng</a>
+                            @*<a href="#" class="btn btn-primary" role="button">Thuê phòng</a>*@
                         </p>
                     </div>
                 </div>
