--- a/MVCQLKS/MVCQLKS/Views/Order/RegisOrder.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Order/RegisOrder.cshtml
@@ -85,7 +85,7 @@
             //<p class="error">@ViewBag.ErrorMsg</p>
             //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
         }
-        @using (Html.BeginForm("AddCus", "Employ", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("AddCusChoNV", "Employ", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
             <div class="panel-headding text-center">
                 <h2>Phiếu đăng ký thuê phòng @ViewBag.TenPhong</h2>
