--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         @RenderSection("style")
     }
     <style type="text/css">
-          .caption-green {
+        .caption-green {
             color: forestgreen;
         }
 
@@ -68,46 +68,69 @@
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="@Url.Action("QuanLyCusBookRoom", "Employ")">Khách hàng đặt phòng <span class="sr-only">(current)</span></a></li>
-                        <li><a href="@Url.Action("QuanLyCusChoNV", "Employ")">Quản lý khách hàng</a></li>
-                        <li><a href="@Url.Action("QuanLyRoomChoNV", "Employ")">Quản lý phòng</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form id="frmSearch" method="post" action="@Url.Action("TimKiem", "Room")" class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input id="txtSearch" type="text" name="noidungSearch" class="form-control" placeholder="Nội dung cần tìm">
-                        </div>
-                        <a name="btnSearch" href="javascript:void" class="btn btn-default" role="button">Tìm kiếm</a>
-                    </form>
+                    @if (Html.IsLogged() == false)
+                    {
+                        <ul class="nav navbar-nav"></ul>
+                    }
+                    else
+                    {
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="@Url.Action("QuanLyCusBookRoom", "Employ")">Khách hàng đặt phòng <span class="sr-only">(current)</span></a></li>
+                            <li><a href="@Url.Action("QuanLyCusChoNV", "Employ")">Quản lý khách hàng</a></li>
+                            <li><a href="@Url.Action("QuanLyRoomChoNV", "Employ")">Quản lý phòng</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">One more separated link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                                                <form id="frmSearch" method="post" action="@Url.Action("TimKiem", "Room")" class="navbar-form navbar-left">
+                                                    <div class="form-group">
+                                                        <input id="txtSearch" type="text" name="noidungSearch" class="form-control" placeholder="Nội dung cần tìm">
+                                                    </div>
+                                                    <a name="btnSearch" href="javascript:void" class="btn btn-default" role="button">Tìm kiếm</a>
+                                                </form>
+                    }
+
                     <ul class="nav navbar-nav navbar-right">
                         @if (Html.IsLogged() == false)
                         {
                             <li><a href="@Url.Action("Register", "Account")">Đăng ký</a></li>
-                            <li><a href="@Url.Action("Login", "Account")">Đăng nhập</a></li>
+                                                        <li><a href="@Url.Action("Login", "Account")">Đăng nhập</a></li>
                         }
                         else
                         {
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
-                                    <li><a href="@Url.Action("IndexManageRoom", "ManageRoom")"><i class="fa fa-id-card" aria-hidden="true"></i> Quản trị của Admin</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a id="logoutLink" href="javascript:void"><i class="fas fa-sign-out-alt"></i> Thoát</a></li>
-                                </ul>
-                            </li>
+                            if (Html.IsLoggedAdmin() == false)
+                            {
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a id="logoutLink" href="javascript:void"><i class="fas fa-sign-out-alt"></i> Thoát</a></li>
+                                    </ul>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
+                                        <li><a href="@Url.Action("IndexManageRoom", "ManageRoom")"><i class="fa fa-id-card" aria-hidden="true"></i> Quản trị của Admin</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a id="logoutLink" href="javascript:void"><i class="fas fa-sign-out-alt"></i> Thoát</a></li>
+                                    </ul>
+                                </li>
+                            }
+
                         }
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -115,25 +138,25 @@
         </nav>
         <form id="frmLogout" method="post" action="@Url.Action("Logout", "Account")"></form>
         @*<div class="row">
-            <div class="col-md-3">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Quản lý Khách sạn</div>
-                    <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách phòng</a>
-                </div>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Quản lý Khách hàng</div>
-                    <a href="@Url.Action("CustomerList", "Employ")" class="list-group-item">Danh sách khách hàng</a>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">@RenderSection("ContentHeader")</div>
-                    <div class="panel-body">
-                        @RenderBody()
+                <div class="col-md-3">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">Quản lý Khách sạn</div>
+                        <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách phòng</a>
+                    </div>
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">Quản lý Khách hàng</div>
+                        <a href="@Url.Action("CustomerList", "Employ")" class="list-group-item">Danh sách khách hàng</a>
                     </div>
                 </div>
-            </div>
-        </div>*@
+                <div class="col-md-9">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">@RenderSection("ContentHeader")</div>
+                        <div class="panel-body">
+                            @RenderBody()
+                        </div>
+                    </div>
+                </div>
+            </div>*@
         <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-primary">
