--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCus.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCus.cshtml
@@ -82,7 +82,7 @@
             //<p class="error">@ViewBag.ErrorMsg</p>
             //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
         }
-        @using (Html.BeginForm("UpdateInfoCus", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("UpdateInfoCus", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmUpdate", enctype = "multipart/form-data" }))
         {
             <div class="form-group">
                 @*@Html.LabelFor(m => m.CatIDInfo, "ID loại sản phẩm:", new { @class = "col-sm-2 control-label" })
